--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 PORT=3000
+POSTGRES_PORT=5432
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
+
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
