--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.21.3",
     "sequelize-typescript": "^2.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
