feat: add jwt strategy

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ POSTGRES_PORT=5433
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=nest
+
+JWT_SECRET_KEY=secret123123
+TOKEN_EXPIRE_TIME=1h
