feat: edit env.expample

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,7 @@ POSTGRES_PORT=5432
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
+POSTGRES_DB=nest
+
+JWT_SECRET_KEY=secret123123
+TOKEN_EXPIRE_TIME=1h
